--- a/goattrading.com/index.html
+++ b/goattrading.com/index.html
@@ -21,6 +21,12 @@
           </ul>
         </div>
       </nav>
+
+      <dic class="text-box">
+        <h1>GOAT TRADING 4 YOU</h1>
+        <p>WE HAVE BEEN TRADING GOATS SINCE 1850 ONLY HIGH END GOATS</p>
+        <a href="class="hero-btn">VISIT US TO KNOW MORE</a>
+      </dic>
     </section>
   </body>
 </html>
